@@ -23,7 +23,7 @@
    "prereqs" : {
       "build" : {
          "requires" : {
-            "Test::Exception" : "0.03",
+            "Test::Fatal" : 0,
             "Test::MockObject" : 0,
             "Test::More" : "0.41",
             "Test::Requires" : "0.02",
