@@ -3,7 +3,7 @@ abstract: 'Interact with remote applications that use SAJAX.'
 author:
   - 'Douglas Christopher Wilson <doug@somethingdoug.com>'
 build_requires:
-  Test::Exception: 0.03
+  Test::Fatal: 0
   Test::MockObject: 0
   Test::More: 0.41
   Test::Requires: 0.02
