@@ -1,10 +1,10 @@
-#!perl -T
+#!/usr/bin/perl -T
 
 use strict;
 use warnings 'all';
 
 use Test::More tests => 10;
-use Test::Exception 0.03;
+use Test::Fatal;
 
 use Net::SAJAX;
 use URI;
@@ -25,14 +25,14 @@ use URI;
 	isnt($sajax->has_target_id, 1, 'Default has no target ID');
 
 	# Manipulate URL
-	lives_ok(sub {$sajax->url('http://example.net/app.cgi')}, 'Change URL');
+	is(exception {$sajax->url('http://example.net/app.cgi')}, undef, 'Change URL');
 	is($sajax->url, 'http://example.net/app.cgi', 'URL has been modified');
 
 	# Manipulate send rand key
-	lives_ok(sub {$sajax->send_rand_key(1)}, 'Change send rand key');
+	is(exception {$sajax->send_rand_key(1)}, undef, 'Change send rand key');
 	is($sajax->send_rand_key, 1, 'Send rand key has been modified');
 
 	# Manipulate target ID
-	lives_ok(sub {$sajax->target_id('some_target')}, 'Change target ID');
+	is(exception {$sajax->target_id('some_target')}, undef, 'Change target ID');
 	is($sajax->target_id, 'some_target', 'Target ID has been modified');
 }
